# Ball_On_Plate

./: README.md  Rapor.docx
Ball&Plate3D/test/: CMakeLists.txt  main.cpp
FINAL_DEMO/: Readme.md
FINAL_DEMO/Codes/: Readme.md
FINAL_DEMO/Codes/Ball&Plate/: CMakeLists.txt  main.cpp  rs232.h
FINAL_DEMO/Codes/Final/: Final.ino
FINAL_DEMO/Codes/OpenSceneGraph/: CMakeLists.txt
FINAL_DEMO/Codes/OpenSceneGraph/include/OpenThreads/: Config
FINAL_DEMO/Codes/OpenSceneGraph/include/osg/: Config
FINAL_DEMO/Codes/OpenSceneGraph/lib/pkgconfig/: openscenegraph-osg.pc  openscenegraph-osgAnimation.pc  openscenegraph-osgDB.pc  openscenegraph-osgFX.pc  openscenegraph-osgGA.pc  openscenegraph-osgManipulator.pc  openscenegraph-osgParticle.pc  openscenegraph-osgShadow.pc  openscenegraph-osgSim.pc  openscenegraph-osgTerrain.pc  openscenegraph-osgText.pc  openscenegraph-osgUtil.pc  openscenegraph-osgViewer.pc  openscenegraph-osgVolume.pc  openscenegraph-osgWidget.pc  openscenegraph.pc  openthreads.pc
arduino/BAP/: BAP.ino  BAP_demo.ino  BAP_v2.ino  BAP_v3.ino  BAP_v4.ino  BAP_v5.ino  BAP_with_frontend.ino  README.md
arduino/BAP/BAP_FINAL/: BAP_FINAL.ino
arduino/BAP/BAP_FINAL_V2/: BAP_FINAL_V2.ino
arduino/Keyboard/: Keyboard.ino
arduino/KeypadTest2/: KeypadTest2.ino
arduino/all_in_one/hackster/: PID_v1.h  README.md  WiiNunchuk.cpp  hackster.ino
arduino/all_in_one/keyboard_input/: Keyboard.cpp  keyboard_input.ino
arduino/communication/: communication.ino
arduino/communication/linux/: README.md
arduino/communication/linux/keySend/: keySend
arduino/communication/windows/: README.md
arduino/communication/windows/Com/: README.md  demo_rx.c  demo_tx.c
arduino/communication/windows/communication/: README.md  communication.ino
arduino/communication/windows/communication/send-receive/: README.md
arduino/communication/windows/communication/send-receive/old/arduino/: Serial.cpp
arduino/communication/windows/communication/send-receive/old/keySend/: serial.c
arduino/communication/windows/communication/send-receive/rs232/: demo_rx.c  demo_tx.c
arduino/libraries/: readme.txt
arduino/libraries/ArduinoWiiNunchuk/: WiiNunchuk.cpp  wiinunchuk.h
arduino/servo/BallOnPlate_HardwareDemo/: BallOnPlate_HardwareDemo.ino
arduino/servo/BallOnPlate_HardwareDemo/TouchScreenDemo/: TouchScreenDemo.ino
arduino/servo/BallOnPlate_HardwareDemo/libs/: Keyboard.h
arduino/servo/BallOnPlate_HardwareDemo/libs/HID/: HID.cpp
arduino/servo/servoController/: servoController.ino
arduino/servo/servoController/keySend/: keySend.cpp
arduino/servo/servoController/windows/servoController/: servoController.ino
arduino/servo/servoController/windows/servoController/receive/arduino/: main.cpp
arduino/servo/servoController/windows/servoController/receive/instructables/: Arduino.cpp
arduino/servo/servoController/windows/servoController/receive/rs-232/: demo_tx.c
arduino/servo/servoController/windows/servoController/receive/rs232/: demo_rx.c  demo_tx.c
arduino/servo_test/: servo_test.ino
arduino/servo_test2/: servo_test2.ino
arduino/touchscreen/touchscreen_test.old/: README.md  touchscreen_test.old.ino
arduino/touchscreen/touchscreendemoshield/: README.md  TouchScreen.cpp  touchscreendemoshield.ino
arduino/touchscreen/touchscreendemoshield/windows/: TouchScreen.cpp  TouchScreen.h
libraries/ArduinoWiiNunchuk/: WiiNunchuk.h
other/touchscreen_info/: README.md
report/: Rapor.docx
report/assets/: CMakeList.txt  blok_şeması.xml  kale_oyunu.xml  keypad_girişleri.xml
visual/: readme.txt
visual/3D/: CMakeLists.txt  demo_rx.c  main.cpp  rs232.cpp  rs232.h
visual/Ball&Plate/: Ball_Plate  CMakeLists.txt  main.cpp  rs232.cpp  rs232.h
visual/BallAndPlate/: BallAndPlate.pro  ball.cpp  ball.h  deployment.pri  main.cpp  main.qml  plate.cpp  plate.h  qml.qrc  rotatingtrefoilknot.cpp  rotatingtrefoilknot.h  scenemodifier.cpp  scenemodifier.h
visual/ClionProjects/Ball&Plate/: CMakeLists.txt  main.cpp
visual/ClionProjects/ball/: CMakeLists.txt  main.cpp
visual/ClionProjects/shadow/: CMakeLists.txt  main.cpp
visual/ClionProjects/test/: main.cpp
visual/ClionProjects/texturemap/: CMakeLists.txt  main.cpp
visual/ClionProjects/widget/: CMakeLists.txt  main.cpp
